--- a/local_graph_adt.tex
+++ b/local_graph_adt.tex
@@ -1,6 +1,6 @@
 \documentclass{amsart}
 
-\title{Abstract Data Types}
+\title{LocalGraph Abstract Data Type}
 \author{Todd D. Vance}
 \date{\today}
 
